--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/Core2019
+/Core2019/bin/Debug/netcoreapp2.2
+/Core2019/obj
